// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> renders 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {},
    ]
  }
/>
`;

exports[`<Text> when {caption} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 11.2,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {color} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {
        "color": "#e85a7e",
      },
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 19.2,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {lighten} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      Object {
        "color": undefined,
      },
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {numberOfLines} 1`] = `
<Text
  numberOfLines={2}
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {style} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {
        "color": "orange",
      },
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {subtitle} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 14.4,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;
